--- a/src/Temperature.css
+++ b/src/Temperature.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap");
 
 body {
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
 }
 h1 {
   text-align: center;
@@ -54,7 +54,7 @@ a {
 }
 .weatherApp {
   margin: 15px auto 10px auto;
-  background-image: linear-gradient(to bottom, #fff1eb 25%, #ace0f9 95%);
+  background-image: linear-gradient(to bottom, #abe9ff 25%, #85ccff 95%);
   padding: 18px;
   height: 629px;
   border: 0.5px solid #aeb2b8;
